# container-ex001

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml  pytest.ini
pipeline/: lib_utils.py  pipeline.py
tests/: test_lib_utils.py
